--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   ],
   "main": "./lib",
   "dependencies": {
-    "notp": "2.0.x",
     "passport-strategy": "1.0.0",
-    "pkginfo": "0.2.x"
+    "pkginfo": "0.2.x",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "mocha": "1.x.x",
